<resources>
    <string name="app_name">MyChat</string>
    <string name="send">SEND</string>
    <string name="t_input_chat_content">\t INPUT MESSAGE</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="or">or</string>
    <string name="login_with_qq">LOGIN WITH QQ</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="modifyPsw">修改密码</string>
    <string name="inputSafeAnswer">输入密码答案</string>
    <string name="inputNewPsw">输入新密码</string>
    <string name="qrxg">确认修改</string>
    <string name="inoutPsw">输入账户密码</string>
    <string name="modifyPhone">修改绑定手机</string>
    <string name="register">注册账户</string>
    <string name="yyzh">已有账号？快去</string>
    <string name="login_chinese">登录</string>
    <string name="ba">吧</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="addNewFriend">添加新朋友</string>
    <string name="add">添加</string>
    <string name="myfriend">\t我的朋友</string>
    <string name="query">查找</string>
    <string name="addFriendQueryHint">\t输入查找的账号</string>
    <string name="addRecord">添加记录</string>
    <string name="desc">备注信息</string>
    <string name="accept">接受</string>
    <string name="refuse">拒绝</string>
    <string name="AfQureyResult">查询结果</string>
    <string name="AfDescHint">留点备注吧，让ta知道你是谁</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sengMessage">发送消息</string>
    <string name="delFriend">删除好友</string>
    <string name="userSafe">账户安全</string>
    <string name="securityDialogHint">为了你的账户安全，请输入账户密码</string>
    <string name="confirm">确定</string>
    <string name="cancel">退出</string>
    <string name="enterCode">输入验证码</string>
    <string name="inputPhoneNumber">输入绑定的手机号</string>
    <string name="sendCode">发送验证码</string>
</resources>
