<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#DDD"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingTop="20dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_security_user" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/securityDialogHint"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="240dp"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:background="@drawable/security_et_border"
        android:gravity="center"
        android:hint="@string/inoutPsw" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/security_dialog_cancel_selector"
            android:text="@string/cancel"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:background="@drawable/contact_addfriend_selector"
            android:text="@string/confirm"
            android:textColor="#FFF" />

    </LinearLayout>
</LinearLayout>