<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/AfQureyResult"
        android:textColor="#636363"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <com.view.CircleImageView
            android:id="@+id/ivHead"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_logo" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="#393939"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/etDesc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/an_et_query"
        android:gravity="center"
        android:hint="@string/AfDescHint"
        android:textColor="#636363"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnAddFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/nf_accept_selector"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />
</LinearLayout>