<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE">

    <RelativeLayout
        android:id="@+id/lyt_title"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#9876DE">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lyt_username"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/lyt_title"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/lyt_username_register"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:background="@mipmap/ic_user"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/username"
            android:maxLength="10"
            android:textColor="#BFBFBF"
            android:textColorHint="#BFBFBF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyt_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/lyt_username"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/lyt_username_register"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:background="@mipmap/ic_password"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:textColor="#BFBFBF"
            android:textColorHint="#BFBFBF" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lyt_password"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/reg_register_selector"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="19sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yyzh"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="true"
            android:text="@string/login_chinese"
            android:textColor="#2EA1D9"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ba"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>
