<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#df8628d9"
    android:orientation="vertical">

    <include layout="@layout/lyt_return" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.view.CircleImageView
        android:id="@+id/ivHead"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_logo"
        app:border_color="#FFF"
        app:border_width="3dp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#1e1e1e"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/action_settings"
        android:textColor="#979797"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="240dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/userinfo_btn_selector"
        android:onClick="onBtnClick"
        android:text="@string/sengMessage"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="240dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/userinfo_del_selector"
        android:onClick="onBtnClick"
        android:text="@string/delFriend"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

</LinearLayout>