<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#425E92"
    android:orientation="vertical"
    android:paddingBottom="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="24dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#718CA1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#425E92"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:background="@mipmap/ic_user"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/username"
            android:maxLength="10"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#718CA1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#425E92"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:background="@mipmap/ic_password"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="12"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#718CA1" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#0C81F6"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#718CA1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/or"
            android:textColor="#EEEEEE" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#718CA1" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLoginWidthQQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#F95959"
        android:text="@string/login_with_qq"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnForgetPsw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:text="@string/forgetPassword"
            android:textColor="#EEEEEE"
            android:textSize="15sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="#EEEEEE" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:text="@string/register"
            android:textColor="#EEEEEE"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>
