<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="#f2e446"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivSecurityIcon"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_unsafe" />

        <TextView
            android:id="@+id/tvSecurity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#001eff"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c2c1c1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/set_btn_selector"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="12dp"
            android:background="@mipmap/ic_psd"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/modifyPsw" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytModifyPsw"
        android:layout_width="340dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="32dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginRight="12dp"
                android:layout_weight="2"
                android:background="@drawable/security_et_border"
                android:gravity="center"
                android:hint="@string/inputPhoneNumber"
                android:inputType="phone"
                android:textColorHint="#a1a0a0" />

            <Button
                android:id="@+id/btnSendCode"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:background="@drawable/contact_addfriend_selector"
                android:text="@string/sendCode"
                android:textColor="#FFF" />

        </LinearLayout>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/security_et_border"
            android:gravity="center"
            android:hint="@string/inputNewPsw"
            android:inputType="textPassword"
            android:textColorHint="#a1a0a0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <EditText
                android:id="@+id/etCode"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/security_et_border"
                android:gravity="center"
                android:hint="@string/enterCode"
                android:textColorHint="#a1a0a0" />

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:background="@drawable/contact_addfriend_selector"
                android:text="@string/qrxg"
                android:textColor="#FFF" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#b7b7b7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/set_btn_selector"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:background="@mipmap/ic_phone"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/modifyPhone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytModifyPhoneNumber"
        android:layout_width="340dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="32dp">


        <EditText
            android:id="@+id/etPhoneNumber1"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/security_et_border"
            android:gravity="center"
            android:hint="@string/inputPhoneNumber"
            android:inputType="phone"
            android:textColorHint="#a1a0a0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etCode1"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:background="@drawable/security_et_border"
                android:gravity="center"
                android:hint="@string/enterCode"
                android:inputType="textPassword"
                android:textColorHint="#a1a0a0" />

            <Button
                android:id="@+id/btnSendCode1"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:background="@drawable/contact_addfriend_selector"
                android:text="@string/sendCode"
                android:textColor="#FFF" />

        </LinearLayout>

        <Button
            android:id="@+id/btnConfirm1"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/contact_addfriend_selector"
            android:text="@string/confirm"
            android:textColor="#FFF" />

    </LinearLayout>


</LinearLayout>