<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#000000"
        android:orientation="horizontal">

        <com.view.CircleImageView
            android:id="@+id/ivHead"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:src="@mipmap/ic_logo" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:clickable="false"
        android:divider="@null"
        android:dividerHeight="5dp"></ListView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">

        <EditText
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/message_text"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/t_input_chat_content" />

        <Button
            android:id="@+id/send"
            android:layout_width="64dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/send_selector"
            android:text="@string/send"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>
